--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin: 0 ;
+    padding: 0 ;
+  
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  
+  height: 100vh;
+}
+
+.header{
+  background-color: aquamarine;
+  height: 15%;
+  width: 100%;
+}
+
+.body{
+  background-color: blueviolet;
+  height: 75%;
+  width: 100%;
+  display: flex;
+}
+
+.sideNav{
+  width: 20%;
+  background-color: khaki;
+}
+
+.mainContent{
+  width: 60%;
+  background-color: goldenrod;
+}
+
+.filter{
+  width: 20%;
+  background-color: lightblue;
+
+}
+
+
+
+.footer{
+  background-color: grey;
+  height: 10%;
+  width: 100%;
 }
