--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .container{
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 .header{
@@ -22,12 +23,21 @@
   height: 82%;
   width: 100%;
   display: flex;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  
 }
 
 /* components inside body */
 .sideNav{
   width: 15%;
   background-color: #edede8;
+  height: 100%;
+  margin-right: 20px;
+  /* margin-bottom: -5000px; any large number will do */
+  /* padding-bottom: 5000px;  */
+  /* position: absolute; */
+  /* position: absolute; */
 }
 .mainContent{
   width: 65%;
@@ -38,12 +48,13 @@
 
 .ComplaintCard{
   margin-top: 20px;
+  
 }
 
 .filter{
   width: 20%;
   background-color: lightblue;
-
+  
 }
 
 
