--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .body {
-  height: 82%;
+  height: 91.5%;
   width: 100%;
   display: flex;
   overflow-y: scroll;
@@ -26,32 +26,36 @@
 /* components inside body */
 .sideNav {
   width: 15%;
-  background-color: #edede8;
+  position: fixed;
+  background-Color: #edede8;
   height: 100%;
-  margin-right: 20px;
+  /* margin-right: 50%; */
   /* margin-bottom: -5000px; any large number will do */
   /* padding-bottom: 5000px;  */
   /* position: absolute; */
   /* position: absolute; */
 }
-.mainContent {
+.comnfot{
+  /* position: fixed; */
+  margin-left: 15.2%;
   width: 65%;
-  padding: 20px;
-
-  /* background-color: goldenrod; */
+  /* margin-right: 100.2%; */
+  
 }
-
-.ComplaintCard {
-  margin-top: 20px;
+.mainContent {
+  padding: 20px;
 }
 
 .filter {
   width: 20%;
+  position: fixed;
+  height: 100vh;
+  margin-left: 79%;
   background-color: lightblue;
 }
 
 .footer {
   background-color: grey;
-  height: 10%;
-  width: 100%;
+  height: 20%;
+  /* width: 100%; */
 }
