--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,12 @@
   width: 20%;
   position: fixed;
   height: 100vh;
-  margin-left: 79%;
+  left: 79%;
   background-color: lightblue;
 }
 
 .footer {
-  background-color: grey;
+  /* background-color: grey; */
   height: 20%;
   /* width: 100%; */
 }
