--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 }
 
 .header {
-  background-color: aquamarine;
   height: 8.5%;
   width: 100%;
 }
@@ -30,14 +29,11 @@
   background-Color: #edede8;
   height: 100%;
   /* margin-right: 50%; */
-  /* margin-bottom: -5000px; any large number will do */
-  /* padding-bottom: 5000px;  */
-  /* position: absolute; */
-  /* position: absolute; */
+  
 }
 .comnfot{
   /* position: fixed; */
-  margin-left: 15.2%;
+  margin-left: 15.1%;
   width: 65%;
   /* margin-right: 100.2%; */
   
@@ -55,7 +51,7 @@
 }
 
 .footer {
-  /* background-color: grey; */
+  background-color: rgba(0, 0, 0, .05);
   height: 20%;
   /* width: 100%; */
 }
