--- a/src/App.css
+++ b/src/App.css
@@ -24,22 +24,24 @@
 
 /* components inside body */
 .sideNav {
-  width: 15%;
+  width: 15.1%;
   position: fixed;
-  background-Color: #edede8;
+  background-color: #edede8;
   height: 100%;
   /* margin-right: 50%; */
-  
 }
-.comnfot{
+
+.comnfot {
   /* position: fixed; */
-  margin-left: 15.1%;
+  margin-left: 15.2%;
   width: 65%;
   /* margin-right: 100.2%; */
-  
 }
+
 .mainContent {
   padding: 20px;
+
+  /* background-color: goldenrod; */
 }
 
 .filter {
@@ -47,11 +49,17 @@
   position: fixed;
   height: 100vh;
   left: 79%;
-  background-color: lightblue;
+  background-color: #edede8;
 }
 
 .footer {
-  background-color: rgba(0, 0, 0, .05);
-  height: 20%;
-  /* width: 100%; */
+  background-color: #263238;
+  /* background-Color: #e5e5e5; */
+
+  height: 35%;
+  width: 100%;
+  padding-top: 20px;
+  align-items: center;
+  text-align: center;
+  display: inline-flexbox;
 }
